--- a/webui/main/templates/main/index.html
+++ b/webui/main/templates/main/index.html
@@ -10,47 +10,23 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
     </head>
     <body>
-        <div class="side_bar">
-            <a class="current_page" href="#">Home</a>
-            <a href="#">Charts</a>
-            <a href="#">Console</a>
+        <div id="title">
+            <h1>Nebraska</h1>
+            <h2>Online Banking Companion</h2>
         </div>
         <div id="page_content">
-            <div id="title">
-                <h1>Nebraska</h1>
-                <h2>Online Banking Companion</h2>
+            <div class="side_bar">
+                <a class="current_page" href="#">Home</a>
+                <a href="#">Charts</a>
+                <a href="#">Console</a>
             </div>
-            <div id="chart_sample">
-                <canvas id="chart"></canvas>
-                <script>
-                    var years = [1500,1600,1700,1750,1800,1850,1900,1950,1999,2050];
-                    var africa = [86,114,106,106,107,111,133,221,783,2478];
-                    var asia = [282,350,411,502,635,809,947,1402,3700,5267];
-                    var europe = [168,170,178,190,203,276,408,547,675,734];
-                    var latinAmerica = [40,20,10,16,24,38,74,167,508,784];
-                    var northAmerica = [6,3,2,2,7,26,82,172,312,433];
-                    
-                    var ctx = document.getElementById("chart");
-                    var myChart = new Chart(ctx, {
-                        type: 'line',
-                        data: {
-                            labels: years,
-                            datasets: [{
-                                data: africa
-                            }]
-                        },
-                        options: {
-                            layout: {
-                                padding: {
-                                    top: 20,
-                                    right: 20,
-                                    bottom: 20,
-                                    left: 20
-                                }
-                            }
-                        }
-                    });
-                </script>
+            <div id="page_body">
+                <div id="chart_sample">
+                    <canvas id="chart"></canvas>
+                    <script src="{% static 'main/chart_script.js' %}"></script>
+                </div>
+                <div id="bacon">
+                </div>
             </div>
         </div>
     </body>
