--- a/webui/main/templates/main/index.html
+++ b/webui/main/templates/main/index.html
@@ -14,20 +14,35 @@
             <h1>Nebraska</h1>
             <h2>Online Banking Companion</h2>
         </div>
-        <div id="page_content">
-            <div class="side_bar">
-                <a class="current_page" href="#">Home</a>
-                <a href="#">Charts</a>
-                <a href="#">Console</a>
+        <div id="page_body">
+            <div id="chart_sample">
+                <canvas id="chart1"></canvas>
+                <script>
+                    var dates = {{ js_dates|safe }};
+                    var balnc = {{ js_balnc|safe }};
+                    var cnvs = document.getElementById('chart1');
+                    var chrt = new Chart(cnvs, {
+                        type: 'line',
+                        data: {
+                            labels: dates,
+                            datasets: [{
+                                data: balnc
+                            }]
+                        },
+                        options: {
+                            layout: {
+                                padding: {
+                                    left: 20,
+                                    right: 20,
+                                    top: 20,
+                                    bottom: 20
+                                }
+                            }
+                        }
+                    });
+                </script>
             </div>
-            <div id="page_body">
-                <div id="chart_sample">
-                    <canvas id="chart"></canvas>
-                    <script src="{% static 'main/chart_script.js' %}"></script>
-                </div>
-                <div id="bacon">
-                </div>
-            </div>
+            <div id="chart_sample">Another chart here plz</div>
         </div>
     </body>
 </html>
