--- a/webui/nebraska-webui/templates/nebraska-webui/index.html
+++ b/webui/nebraska-webui/templates/nebraska-webui/index.html
@@ -5,22 +5,23 @@
         <title>Nebraska | Home</title>
         
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Josefin+Slab" rel="stylesheet"/>
-        <link href="{% static 'main/style.css' %}" rel="stylesheet" type="text/css"/>
+        <link href="{% static 'nebraska-webui/style.css' %}" rel="stylesheet" type="text/css"/>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
-        <script src="{% static 'main/balanceChart.js' %}"></script>
+        <script src="{% static 'nebraska-webui/balanceChart.js' %}"></script>
     </head>
     <body>
         <div id="title">
             <h1>Nebraska</h1>
             <h2>Online Banking Companion</h2>
         </div>
-        <div id="page_body">
-            <div id="chart_sample1">
-                <canvas id="balanceChart" style="height: 500px; width: 500px;"></canvas>
+        <div id="page-body">
+            <div id="chart-sample">
+                <canvas id="balance-chart" style="width:100%; height:100%"></canvas>
             </div>
-            <div id="chart_sample2">Another chart here plz</div>
+            <div id="placehold-left"></div>
+            <div id="placehold-right"></div>
         </div>
     </body>
 </html>
